# libhuman

./: CMakeLists.txt  package.xml
include/: Human.hpp  HumanHand.h  HumanHandKinematicsSimulationPositionCommandExecutor.h
resource/mesh/: Head_mesh.dae  LCollar_mesh.dae  LFing12_mesh.dae  LFing20_mesh.dae  LFing30_mesh.dae  LFing31_mesh.dae  LFing32_mesh.dae  LFing41_mesh.dae  LForearm_mesh.dae  LHand_mesh.dae  LShoulder3_mesh.dae  LShoulder_mesh.dae  LThumbBase_mesh.dae  LToe_mesh.dae  RCalf_mesh.dae  RCollar_mesh.dae  RFing10_mesh.dae  RFing32_mesh.dae  RFing41_mesh.dae  RFing42_mesh.dae  RForearm_mesh.dae  RHand3_mesh.dae  RHand_mesh.dae  RShoulder3_mesh.dae  RShoulder_mesh.dae  RThumb1_mesh.dae  RThumb2_mesh.dae  RThumbBase2_mesh.dae  RThumbBase_mesh.dae  RToe_mesh.dae  RightEye_mesh.dae
robot/: human_short.srdf  human_short.urdf  man1.srdf  man1.urdf  vis_human_short.srdf  vis_human_short.urdf  vis_man1.urdf
robot/mesh/: Chest_mesh.dae  Hips_mesh.dae  LCalf_mesh.dae  LFing10_mesh.dae  LFing11_mesh.dae  LFing21_mesh.dae  LFing22_mesh.dae  LFing40_mesh.dae  LFing42_mesh.dae  LFoot_mesh.dae  LHand2_mesh.dae  LHand3_mesh.dae  LShoulder2_mesh.dae  LThigh_mesh.dae  LThumb0_mesh.dae  LThumb1_mesh.dae  LThumb2_mesh.dae  LThumbBase2_mesh.dae  LeftEye_mesh.dae  Neck_mesh.dae  RFing11_mesh.dae  RFing12_mesh.dae  RFing20_mesh.dae  RFing21_mesh.dae  RFing22_mesh.dae  RFing30_mesh.dae  RFing31_mesh.dae  RFing40_mesh.dae  RFoot_mesh.dae  RHand2_mesh.dae  RShoulder2_mesh.dae  RThigh_mesh.dae  RThumb0_mesh.dae
script/: plan_to_tsr.cpp  simple_load.cpp
src/: Human.cpp  HumanHand.cpp  HumanHandKinematicsSimulationPositionCommandExecutor.cpp
